# dfqa

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  testpypi-publish.yml
dfqa/: __init__.py  completedness.py  consistency.py  metadata.py  pretty.py  uniqueness.py
dfqa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dfqa/reports/: __init__.py  report_template.docx
reports/: report_template.docx
tests/: test_import.py
