[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfqa"
version = "0.1.0"
description = "A Python library for assessing the data quality in pandas DataFrames."
authors = [
    { name = "Tan Shih Jen" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "plotly",
    "openpyxl"
]
keywords = ["data-quality", "pandas", "dataframe", "validation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
urls = { "Homepage" = "" }


[tool.setuptools.packages.find]
where = ["."]
